#480 - Artifact-Enabled Documents